# smitty

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  justfile
.github/workflows/: audit.yml  cd.yml  ci.yml  nix.yml  rust.yml
src/: error.rs  lib.rs  main.rs  resolve.rs  result.rs  value.rs
src/lazy/: mod.rs
