[package]
name = "couchpotato"
version.workspace = true
edition.workspace = true
description.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
rust-version.workspace = true

[workspace]
members = []

[workspace.package]
version = "0.1.0"
edition = "2024"
description = "Lazily resolved runtime values"
license = "GPL-3.0-only"
homepage = "https://github.com/dangreco/couchpotato"
documentation = "https://github.com/dangreco/couchpotato"
repository = "https://github.com/dangreco/couchpotato"
rust-version = "1.88.0"
publish = false

[lib]
doctest = false

[lints]
workspace = true

[profile.release]
lto = "fat"
opt-level = 3
codegen-units = 1

[profile.dev]
debug = 0

[features]
default = []
serde = ["dep:serde"]

[dependencies]
async-trait = "0.1.88"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"], optional = true }
thiserror = "2.0.12"

[dev-dependencies]
anyhow = "1.0.98"
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }

[workspace.lints.clippy]
cast_lossless = "deny"
complexity = { level = "deny", priority = -1 }
correctness = { level = "deny", priority = -1 }
dbg_macro = "deny"
explicit_into_iter_loop = "deny"
explicit_iter_loop = "deny"
get_first = "deny"
implicit_clone = "deny"
indexing_slicing = "deny"
inefficient_to_string = "deny"
items-after-statements = "deny"
manual_string_new = "deny"
needless_collect = "deny"
perf = { level = "deny", priority = -1 }
redundant_closure_for_method_calls = "deny"
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
uninlined_format_args = "allow"
unused_self = "deny"
unwrap_used = "deny"
unimplemented = "deny"
unused_async = "deny"
map_err_ignore = "deny"
expect_used = "deny"
as_conversions = "deny"
